# warehouse

./: .dockerignore  Cargo.toml  Dockerfile  README.md
database/migrations/1_initial_setup/: down.sql  up.sql
docker/dev-mysql/: docker-compose.yml
docker/dev-postgres/: docker-compose.yml
docker/warehouse-postgres/: docker-compose.yml
resources/templates/views/misc/: error.html.tera
resources/templates/views/partial/: base.html.tera  confirm.html.tera  navbar.html.tera
resources/templates/views/route/: admin.html.tera
resources/templates/views/route/package/: detail.html.tera  import.html.tera  list.html.tera
resources/templates/views/route/user/: sign_in.html.tera  sign_up.html.tera
src/: main.rs
src/core/: config.rs  error.rs  logger.rs
src/database/: mod.rs  schema.rs
src/service/: mod.rs
src/service/admin/: controller.rs
src/service/index/: controller.rs
src/service/package/: controller.rs  model.rs
src/service/repository/: model.rs
src/service/user/: controller.rs  model.rs
src/utils/: auth.rs  mod.rs  package.rs  path.rs  regex.rs  view.rs
